Inject package version, files into nuspec on build
* Move /build/ -> /pkg/
* Add nuspec
* Refactor package:nuget workflow to create a temporary directory to build the package from - so we can store the transformed file
* Add grunt-template task to transform the nuspec

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-jshint": "~0.7.2",
     "grunt-cli": "~0.1.11",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-nuget": "~0.1.1"
+    "grunt-nuget": "~0.1.1",
+    "grunt-template": "~0.2.2"
   }
 }
