--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-jshint": "~0.7.2",
     "grunt-cli": "~0.1.11",
-    "grunt-contrib-clean": "~0.5.0"
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-touch": "~0.1.0"
   }
 }
