--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "grunt-contrib-jshint": "~0.7.2",
     "grunt-cli": "~0.1.11",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-touch": "~0.1.0"
+    "grunt-touch": "~0.1.0",
+    "guid": "0.0.12",
+    "adm-zip": "~0.4.3",
+    "rimraf": "~2.2.5"
   }
 }
