Quick cleanup of packaging tasks

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "rimraf": "~2.2.5",
     "grunt-nuget": "~0.1.1",
     "grunt-template": "~0.2.2",
-    "grunt-touch": "~0.1.0"
+    "grunt-touch": "~0.1.0",
+    "fs-extra": "~0.8.1"
   }
 }
