Add version # to DLL on build
* Split VersionInfo from AssemblyInfo so we can ignore changes and let the build handle
* Ignore VersionInfo
* Install/configure assemblyinfo grunt task
* Ignore compiler warning about bad version number format (.NET vs SemVer)

--- a/app/Umbraco/Umbraco.Archetype/Archetype.Umbraco.csproj
+++ b/app/Umbraco/Umbraco.Archetype/Archetype.Umbraco.csproj
@@ -228,6 +228,7 @@
     <Compile Include="Models\Fieldset.cs" />
     <Compile Include="Models\Property.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\VersionInfo.cs" />
     <Compile Include="PropertyConverters\ArchetypeValueConverter.cs" />
   </ItemGroup>
   <ItemGroup>
