--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/imulus/Archetype.git"
+  },
+  "dependencies": {
+    "load-grunt-tasks": "~0.4.0"
   }
 }
