Issue #AR-1_serialization: added msbuild (.NET) version, as we need this for VS < 2013,
- updated msbuild module

--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/imulus/Archetype.git"
+  },
+  "devDependencies": {
+    "grunt-msbuild": "^0.1.12"
   }
 }
