--- a/app/Umbraco/Archetype.Tests/Archetype.Tests.csproj
+++ b/app/Umbraco/Archetype.Tests/Archetype.Tests.csproj
@@ -203,6 +203,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyValueConverter\PropertyValueConverterTests.cs" />
     <Compile Include="Serialization\ArchetypeJsonConverterTest.cs" />
+    <Compile Include="Serialization\JsonTestStrings.cs" />
     <Compile Include="Serialization\Models.cs" />
   </ItemGroup>
   <ItemGroup>
