Move deserialization methods to a Helper class

--- a/app/Umbraco/Umbraco.Archetype/Archetype.Umbraco.csproj
+++ b/app/Umbraco/Umbraco.Archetype/Archetype.Umbraco.csproj
@@ -231,6 +231,7 @@
     <Compile Include="Api\ArchetypeDataTypeController.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Events\ExpireCache.cs" />
+    <Compile Include="Extensions\ArchetypeHelper.cs" />
     <Compile Include="Extensions\Extensions.cs" />
     <Compile Include="Models\Archetype.cs" />
     <Compile Include="Models\ArchetypePreValue.cs" />
