--- a/app/Umbraco/Umbraco.Archetype/Archetype.Umbraco.csproj
+++ b/app/Umbraco/Umbraco.Archetype/Archetype.Umbraco.csproj
@@ -241,8 +241,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\VersionInfo.cs" />
     <Compile Include="PropertyConverters\ArchetypeValueConverter.cs" />
-    <Compile Include="Serialization\ArchetypeDatatypeAttribute.cs" />
+    <Compile Include="Serialization\AsArchetypeAttribute.cs" />
     <Compile Include="Serialization\ArchetypeJsonConverter.cs" />
+    <Compile Include="Serialization\AsFieldsetAttribute.cs" />
     <Compile Include="Serialization\SerializationExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
