Issue #AR-1_property_value_converters: switched to using Archetype's native GetValue<T> when getting property values,
- added umbracoSettings.config to the test project: conversion of decimal numbers, e.g. '12345.34' triggers
'NormalizeNumberDecimalSeparator' which in turn requires via 'DefaultShortStringHelper' that the umbracoSettings.config file is loaded. We added this to make sure tests deserializing decimal numbers pass.

--- a/app/Umbraco/Archetype.Tests/Archetype.Tests.csproj
+++ b/app/Umbraco/Archetype.Tests/Archetype.Tests.csproj
@@ -229,6 +229,7 @@
     <None Include="app.config" />
     <None Include="Data\sample-1.json" />
     <None Include="packages.config" />
+    <None Include="SupportingFiles\config\umbracoSettings.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Umbraco.Archetype\Archetype.Umbraco.csproj">
@@ -239,6 +240,13 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>xcopy  $(ProjectDir)SupportingFiles\config\* $(TargetDir)config /I /O /X /E /K /D</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
