--- a/app/Umbraco/Archetype.Tests/app.config
+++ b/app/Umbraco/Archetype.Tests/app.config
@@ -1,6 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <runtime>
+    <configSections>
+      <sectionGroup name="umbracoConfiguration">
+        <section name="settings" type="Umbraco.Core.Configuration.UmbracoSettings.UmbracoSettingsSection, Umbraco.Core" requirePermission="false" />
+      </sectionGroup>
+    </configSections>
+    <umbracoConfiguration>
+      <settings configSource="config\umbracoSettings.config" />
+    </umbracoConfiguration>
+    <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
