--- a/app/Umbraco/Umbraco.Archetype/Archetype.Umbraco.csproj
+++ b/app/Umbraco/Umbraco.Archetype/Archetype.Umbraco.csproj
@@ -211,12 +211,12 @@
     <Compile Include="Events\ExpireCache.cs" />
     <Compile Include="Extensions\ArchetypeHelper.cs" />
     <Compile Include="Extensions\Extensions.cs" />
-    <Compile Include="Models\Archetype.cs" />
+    <Compile Include="Models\ArchetypeModel.cs" />
     <Compile Include="Models\ArchetypePreValue.cs" />
     <Compile Include="Models\ArchetypePreValueFieldset.cs" />
     <Compile Include="Models\ArchetypePreValueProperty.cs" />
-    <Compile Include="Models\Fieldset.cs" />
-    <Compile Include="Models\Property.cs" />
+    <Compile Include="Models\ArchetypeFieldsetModel.cs" />
+    <Compile Include="Models\ArchetypePropertyModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\VersionInfo.cs" />
     <Compile Include="PropertyConverters\ArchetypeValueConverter.cs" />
