Issue #AR-1_serialization: got json escape test to work, added json unescape extension and tests,
To Do: migrate  test code from ArcheTypePropertyEditor if possible.

--- a/app/Umbraco/Archetype.Tests/Archetype.Tests.csproj
+++ b/app/Umbraco/Archetype.Tests/Archetype.Tests.csproj
@@ -235,6 +235,7 @@
     <Compile Include="Serialization\UseCases\Enumerable\JsonTestStrings.cs" />
     <Compile Include="Serialization\UseCases\JsonTestModels.cs" />
     <Compile Include="Serialization\UseCases\JsonTestStrings.cs" />
+    <Compile Include="UnescapeJsonTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
