--- a/app/Umbraco/Umbraco.Archetype/Archetype.Umbraco.csproj
+++ b/app/Umbraco/Umbraco.Archetype/Archetype.Umbraco.csproj
@@ -242,6 +242,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\VersionInfo.cs" />
     <Compile Include="PropertyConverters\ArchetypeValueConverter.cs" />
+    <Compile Include="Serialization\ArchetypeJsonDelinter.cs" />
     <Compile Include="Serialization\AsArchetypeAttribute.cs" />
     <Compile Include="PropertyEditors\ArchetypePropertyEditor.cs" />
     <Compile Include="Serialization\ArchetypeJsonConverter.cs" />
