--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "url": "https://github.com/imulus/Archetype.git"
   },
   "devDependencies": {
-    "grunt-msbuild": "^0.1.12"
+    "grunt-msbuild": "^0.1.12",
+    "grunt-string-replace": "^1.2.0"
   }
 }
