--- a/config/package_courier.nuspec
+++ b/config/package_courier.nuspec
@@ -9,7 +9,7 @@
         <projectUrl>http://github.com/kgiszewski/archetype</projectUrl>
         <description><![CDATA[Archetype Courier extension for Umbraco]]></description>
         <tags>umbraco</tags>
-        <iconUrl>http://imulus.github.io/Archetype/images/logo.png</iconUrl>
+        <iconUrl>http://kgiszewski.github.io/Archetype/images/logo.png</iconUrl>
         <licenseUrl><%= licenseUrl %></licenseUrl>
         <dependencies>
             <dependency id="Archetype.Binaries" version="<%= version %>" />
